--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
 </head>
 
 <body>
@@ -24,16 +24,16 @@
                     <span class="logo__accent">Web</span>Studio</a>
 
                 <ul class="site-nav__list items">
-                    <li class="site-nav__item"><a class="site-nav___link site-nav___link--current" href="./index.html">Студия</a></li>
-                    <li class="site-nav__item"><a class="site-nav___link" href="./portfolio.html">Портфолио</a></li>
-                    <li class="site-nav__item"><a class="site-nav___link" href="#">Контакты</a></li>
+                    <li class="site-nav__item"><a class="site-nav__link site-nav__link--current" href="./index.html">Студия</a></li>
+                    <li class="site-nav__item"><a class="site-nav__link" href="./portfolio.html">Портфолио</a></li>
+                    <li class="site-nav__item"><a class="site-nav__link" href="#">Контакты</a></li>
                 </ul>
             </nav>
 
-            <ul class="header__contact-list items">
+            <ul class="header__contact items">
                 <li class="header__contact-item">
                     <a class="header__contact-link" href="mailto:#">
-                        <svg class="header__contact-icon">
+                        <svg class="header__contact-icon" width="16" height="12">
                             <use href="./images/icons.svg#icon-mail"></use>
                         </svg>
                     info@devstudio.com
@@ -41,7 +41,7 @@
                 </li>
                 <li class="header__contact-item">
                     <a class="header__contact-link" href="tel:#">
-                        <svg class="header__contact-icon">
+                        <svg class="header__contact-icon" width="10" height="16">
                             <use href="./images/icons.svg#icon-smartphone"></use>
                         </svg>
                     +38 096 111 11 11
@@ -69,7 +69,7 @@
                 <ul class="features__list items">
                     <li class="features__item">
                         <div class="features__thumb">
-                            <svg class="feature__icon" width="70" height="70">
+                            <svg class="features__icon" width="70" height="70">
                                 <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
@@ -82,7 +82,7 @@
 
                     <li class="features__item">
                         <div class="features__thumb">
-                            <svg class="feature__icon" width="70" height="70">
+                            <svg class="features__icon" width="70" height="70">
                                 <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
@@ -95,7 +95,7 @@
 
                     <li class="features__item">
                         <div class="features__thumb">
-                            <svg class="feature__icon" width="70" height="70">
+                            <svg class="features__icon" width="70" height="70">
                                 <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
@@ -108,7 +108,7 @@
 
                     <li class="features__item">
                         <div class="features__thumb">
-                            <svg class="feature__icon" width="70" height="70">
+                            <svg class="features__icon" width="70" height="70">
                                 <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
@@ -155,7 +155,7 @@
                     <li class="team__item">
 
                         <img class="images" src="./images/igor.jpg" alt="Игорь Демьяненко" width="270" />
-                        <div class="person__content">
+                        <div class="team__content">
                             <h3 class="team__title">Игорь Демьяненко</h3>
                             <p class="team__position">Product Designer</p>
                             <ul class="social__list items">
@@ -195,7 +195,7 @@
                     <li class="team__item">
 
                         <img class="images" src="./images/olga.jpg" alt="Ольга Репина" width="270" />
-                        <div class="person__content">
+                        <div class="team__content">
                             <h3 class="team__title">Ольга Репина</h3>
                             <p class="team__position">Frontend Developer</p>
                             <ul class="social__list items">
@@ -234,7 +234,7 @@
                     <li class="team__item">
 
                         <img class="images" src="./images/nikolaj.jpg" alt="Николай Тарасов" width="270" />
-                        <div class="person__content">
+                        <div class="team__content">
                             <h3 class="team__title">Николай Тарасов</h3>
                             <p class="team__position">Marketing</p>
                             <ul class="social__list items">
@@ -273,7 +273,7 @@
                     <li class="team__item">
 
                         <img class="images" src="./images/mihail.jpg" alt="Михаил Ермаков" width="270" />
-                        <div class="person__content">
+                        <div class="team__content">
                             <h3 class="team__title">Михаил Ермаков</h3>
                             <p class="team__position">PUI Designer</p>
                             <ul class="social__list items">
@@ -368,7 +368,7 @@
 
     <!-- Подвал -->
     <footer class="footer">
-        <div class="footer__content container">
+        <div class="footer__container container">
             <div class="footer__content">
                 <a href="./index.html" class="logo footer__logo">
                     <span class="logo__accent" >Web</span>Studio</a>
@@ -388,7 +388,7 @@
             <!--Соцсети в футере-->
 
             <div class="social">
-                <b class="social_slogan">Присоединяйтесь</b>
+                <b class="social__slogan">Присоединяйтесь</b>
                 <ul class="social__list items">
                     <li class="social__item" >
                         <a href="#" class="social__link social__link--color" aria-label="instagram">
